<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="shuttles_btn">Shuttle</string>
    <string name="favorites_btn">Favorites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song Name</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_nav">Welcome to \nWorld of Music</string>
    <string name="app_icon">Icon</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="user_name">User Name</string>
    <string name="add">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>