<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <LinearLayout
        android:id="@+id/min15_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/pink"
            android:layout_margin="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="18sp"
        android:text="@string/min_15"
        android:textColor="@color/black"
        android:padding="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min30_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/pink"
            android:layout_margin="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/min_30"
            android:textColor="@color/black"
            android:padding="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/min60_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/pink"
            android:layout_margin="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/min_60"
            android:textColor="@color/black"
            android:padding="8dp"/>
    </LinearLayout>

</LinearLayout>