<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlaylistDetailActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/arrow_back"
            app:tint="@color/white" />

        <TextView
            android:singleLine="true"
            android:id="@+id/playlist_name_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/playlist_btn"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            />


    </LinearLayout>

    <LinearLayout
        android:background="@color/pink"
        android:id="@+id/detail_ll"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playlist_image"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/music_icon" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/info_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center|start"
            android:text="@string/playlist_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_detail_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp"
        android:layout_below="@id/detail_ll"
        android:layout_marginTop="10dp"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffle_btn"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/white"
        android:padding="5dp"
        app:icon="@drawable/shuffle_icon"
        app:iconSize="35dp"
        app:iconTint="@color/pink"

        app:strokeColor="@color/pink"
        app:strokeWidth="2dp" />


    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/shuttles_btn"
            android:drawableLeft="@drawable/add_icon"
            android:drawableTint="@color/pink"
            android:text="@string/add"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/remove_all_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/playlist_btn"
            android:drawableTint="@color/pink"
            android:drawableLeft="@drawable/remove_icon"
            android:text="@string/remove_all"
            android:textColor="@color/black" />

    </LinearLayout>
</RelativeLayout>